<resources>
    <string name="app_name">MyFarm</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_pleaselogin">Welcome, Please login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="ForgetPass">Forgot Password?</string>
    <string name="createTask">Create Task</string>
    <string name="Nameprefix">Name Prefix</string>
    <string name="labelDescription">Description</string>
    <string name="labelconfigtype">Config Type</string>
    <string name="labelCommunitygrip">CommunityGrp</string>
    <string name="selectConfigType">Select Config Type</string>
    <string name="label_expectedStartDate">Expected Start Date of the task</string>
    <string name="label_expectedEndDate">Expected End Date of the task</string>
    <string name="label_startDate">Start Date</string>
    <string name="label_EndDate">End Date</string>
    <string name="labelPackCustomer">Customer</string>
    <string name="labelPackQuanitiy">Quantity</string>
    <string name="labelPackunits">Units</string>
    <string name="addPerson">Add Peron</string>
    <string name="addContainer">Add Container</string>
    <string name="attachMedia">Attach Media</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_waite_file_is_compress">Please Wait file is compress</string>
    <string name="attach_media">Attach Media</string>
    <string-array name="array_task_configtype">
        <item>TRANSPORTATION</item>
        <item>FERMENTATION</item>
        <item>NETTOYAGE</item>
        <item>DEMOFERM</item>

    </string-array>
    <string-array name="array_Pack_configtype">
        <item>Darshini Pack</item>
        <item>FEVESKKM</item>


    </string-array>
    <string-array name="array_communitygroup">
        <item>Select</item>
        <item>CommunityGroup_1</item>
        <item>CommunityGroup_2</item>
        <item>GAB_01</item>
        <item>GAB_02</item>
        <item>CAM_01</item>
        <item>CAM_02</item>
        <item>SYS</item>
        <item>GABON</item>
        <item>CAMERON</item>
        <item>HAITI</item>
        <item>JO</item>
        <item>ALL</item>
        <item>GAB_G1</item>
        <item>GAB_G2</item>
        <item>GAB_G3</item>
        <item>GAB_G4</item>
        <item>GAB_G5</item>
        <item>GAB_G6</item>
        <item>GAB_G7</item>
        <item>GAB_G8</item>
        <item>GAB_G9</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="role_array">
        <item>Select</item>
        <item>Admin</item>
        <item>Producer</item>
        <item>Manager</item>
        <item>Admin Local</item>
        <item>Admin National</item>
        <item>Super Admin</item>
        <item>Client</item>
    </string-array>

    <string-array name="Color">
        <item>@color/purple_200</item>
        <item>@color/red</item>
        <item>@color/purple_500</item>
        <item>@color/purple_700</item>
        <item>@color/black</item>
        <item>@color/green</item>
        <item>@color/grey</item>
        <item>@color/red</item>

    </string-array>
    <string name="title_activity_dash_board_map">DashBoardMapActivity</string>
    <string name="title_activity_maps">Map</string>
    <!--    <string name="google_maps_key">AIzaSyCxyhfBkdDTPpZ8CkihhRattc9LSHjwE4c</string>-->

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA6j9juIKElTL81OCvMyTEY7C-p4lIA0_U</string>

</resources>
